hermes_fuzz_executed_few_shot/fuzz_93_execution
'use strict';
function sum(a, b) {
    const sum = () => {
        return b++;
    };
    return sum() - -a + sum() - b ;
}
sum(1, 1);
 
'use strict';
async () => {
    throw new Error();
};
async () => 1;


Execution Output ------------------:
test.js:11:1: error: async functions are unsupported
async () => {
^~~~~~~~~~~~~
test.js:14:1: error: async functions are unsupported
async () => 1;
^~~~~~~~~~~~~
Emitted 2 errors. exiting.
